--- a/Ri_Happy_Projetos/Projetos/Jogo_da_Memoria/src/styles/reset.css
+++ b/Ri_Happy_Projetos/Projetos/Jogo_da_Memoria/src/styles/reset.css
@@ -1,6 +1,7 @@
 *{
     margin: 0;
     padding: 0;
+    outline: none;
     box-sizing: border-box;
     font-family: "Press Start 2P", system-ui;
     font-weight: 400;
