--- a/Ri_Happy_Projetos/Projetos/Jogo_da_Memoria/src/styles/main.css
+++ b/Ri_Happy_Projetos/Projetos/Jogo_da_Memoria/src/styles/main.css
@@ -5,6 +5,7 @@ body{
     min-height: 100vh;
     background: linear-gradient(to bottom, #000428, #004e92);
     user-select: none;
+    position: relative;
 }
 
 .container{
@@ -22,6 +23,7 @@ body{
         #1e0000 100%
     );
     padding: 40px 60px;
+    border-radius: 5%;
     z-index: 10;
 }
 
@@ -36,7 +38,8 @@ h2{
     width: 100%;
     color: #000;
     background-color: #fff;
-    border: none;
+    border:none;
+    border-radius: 6px;
     font-size: 1.5em;
     cursor:pointer;
     font-weight: 600;
@@ -48,6 +51,7 @@ h2{
 }
 
 .game{
+    position: relative;
     width: 430px;
     height: 430px;
     display: flex;
@@ -55,6 +59,7 @@ h2{
     gap: 10px;
     transform-style: preserve-3d;
     perspective: 500px;
+    z-index: 1;
 }
 
 .item{
@@ -65,6 +70,8 @@ h2{
     align-items: center;
     justify-content: center;
     background-color: #fff;
+    border:none;
+    border-radius: 5px;
 
     font-size: 3em;
     transform: rotateY(180deg);
@@ -75,6 +82,8 @@ h2{
     content: "";
     position: absolute;
     inset: 0;
+    border:none;
+    border-radius: 2%;
     background: #404040;
     /*opacity: 0.85;*/
     transition: 0.25s;
@@ -124,5 +133,24 @@ h2{
     100% {
         transform: translateY(100vh) translateX(calc(50px - 25px));
         opacity: 0;
+    }
+}
+
+.sleigh {
+    position: absolute;
+    top: 20%; 
+    left: -200px; 
+    width: 100px;
+    height: 100px;
+    background: url('../papai-noel.png') no-repeat center/contain;
+    visibility: hidden;
+}
+
+@keyframes sleighMove {
+    0% {
+        transform: translateX(-200px);
+    }
+    100% {
+        transform: translateX(105vw); 
     }
 }
